# webScanner

./: .gitignore  AsyncProcessor.cpp  AsyncProcessor.h  ButtonsState.h  CMakeLists.txt  ListWidget.cpp  ListWidget.h  ScanningConfiguration.h  URLStatus.h  WebScannerHandler.cpp  WebScannerHandler.h  listitem.cpp  listitem.h  listitem.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: 1.txt  2.txt  3.txt  4.txt  7.txt
